@@ -19,6 +19,7 @@ include ./include/Makefile.global
 #   nscp        -- Control port remote administration interface
 #   nslog       -- Common log format module
 #   nsperm      -- Permissions module
+#   nsftp       -- FTP module
 #
 #   nsunix      -- serving HTTP over Unix domain socket
 #   nsvhr       -- Virtual hosting redirector
@@ -30,7 +31,7 @@ include ./include/Makefile.global
 #   nssolid     -- Solid driver (requires Solid library)
 #
 
-MODULES   = nssock nscgi nscp nslog nsperm nsext nspd
+MODULES   = nssock nscgi nscp nslog nsperm nsext nspd nsftp
 #MODULES  = nsssl2 nspostgres nssybpd nssolid nsunix nsvhr
 
 
